--- a/css-sass/view/subtest/_range.scss
+++ b/css-sass/view/subtest/_range.scss
@@ -121,6 +121,10 @@
             font-size: 77%;
             font-weight: bold;
 
+            @media print {
+                font-size: 60%;
+            }
+
             .limits {
                 text-transform: uppercase;
             }
