--- a/css-sass/view/test/_cbc.scss
+++ b/css-sass/view/test/_cbc.scss
@@ -107,6 +107,10 @@
             .text {
                 text-transform: uppercase;
                 font-size: 85%;
+
+                @media print {
+                    font-size: 60%;
+                }
             }
         }
     }
