--- a/js/template/test/base/Header.html
+++ b/js/template/test/base/Header.html
@@ -7,8 +7,8 @@
                 <span class="text">{{title}}</span>
             </span>
             <div title="{{#if requiresFollowUp}}Please review your Next Steps for the follow up action.{{else}}{{patient.name}}’s {{simpleTitle}} result was reviewed and everything looks good.{{/if}}" class="status {{#if requiresFollowUp}}bad{{/if}}">
-                <img class="yui3-hidden-print" src="images/test/base/{{#if requiresFollowUp}}follow-up-bad-2x.png{{else}}follow-up-good-2x.png{{/if}}" alt="" />
-                <img class="yui3-visible-print" src="images/test/base/{{#if requiresFollowUp}}follow-up-bad-print-2x.png{{else}}follow-up-good-2x.png{{/if}}" alt="" />
+                <img class="yui3-hidden-print" src="images/test/base/follow-up-{{#if requiresFollowUp}}bad{{else}}good{{/if}}-2x.png" alt="" />
+                <img class="yui3-visible-print" src="images/test/base/follow-up-{{#if requiresFollowUp}}bad{{else}}good{{/if}}-print-2x.png" alt="" />
             </div>
         </div>
     </div>
