#1434: print - ua - appearance - "expected range" now same size as other "expected range" text

--- a/css-sass/view/test/_urine.scss
+++ b/css-sass/view/test/_urine.scss
@@ -195,6 +195,7 @@
                 margin: 0 0 0 3px;
                 width: auto;
                 text-align: left;
+                font-size: 60%;
             }
         }
 
