--- a/css/screen.css
+++ b/css/screen.css
@@ -4486,6 +4486,7 @@ span.placeholder {
     margin: 0 0 0 3px;
     width: auto;
     text-align: left;
+    font-size: 60%;
   }
 }
 .view-test-urine-analysis .property.appearance .description {
