#1440: Bad indicator now correctly displayed.

--- a/css-sass/view/widget/_indicator.scss
+++ b/css-sass/view/widget/_indicator.scss
@@ -46,6 +46,12 @@ $widgetIndicatorBigHeight: $widgetIndicatorBigWidth;
         display: none\9;
     }
 
+    .bg {
+        &.bad {
+            display: none;
+        }
+    }
+
     &:hover {
         .dot {
             width: $dotExpandedDiameter;
@@ -58,6 +64,16 @@ $widgetIndicatorBigHeight: $widgetIndicatorBigWidth;
     &.bad {
         .dot {
             background-color: #fff868;
+        }
+
+        .bg {
+            &.bad {
+                display: inline;
+            }
+
+            &.good {
+                display: none;
+            }
         }
     }
 
