--- a/css-sass/view/test/_base.scss
+++ b/css-sass/view/test/_base.scss
@@ -105,9 +105,9 @@
 
             position: absolute;
             top: -10px;
-            left: - image-width("images/test/cbc/diagram/rbc-2x.png") / 2 - 20px;
+            left: - image-width("../images/test/cbc/diagram/rbc-2x.png") / 2 - 20px;
 
-            width: image-width("images/test/cbc/diagram/rbc-2x.png") / 2;
+            width: image-width("../images/test/cbc/diagram/rbc-2x.png") / 2;
 
             /* tablet */
             @media only screen and (min-width:($mq-phone + 1px)) and (max-width:($mq-tablet - 1px)) {
