#1508: Rough integration internal note data into report.

--- a/css-sass/screen.scss
+++ b/css-sass/screen.scss
@@ -52,6 +52,7 @@ $include-html-global-classes: false;
 @import "view/page";
 @import "view/report";
 @import "view/mainmenu";
+@import "view/internal-note";
 @import "view/navigation";
 @import "view/overview";
 @import "view/survey";
