--- a/js/template/Page.html
+++ b/js/template/Page.html
@@ -2,6 +2,9 @@
     <!-- main menu -->
     <div class="page-mainmenu page-section-narrow"></div>
 
+    <!-- internal note -->
+    <div class="page-internal-note page-section-narrow"></div>
+
     <!-- report content -->
     <div class="page-content page-section-narrow">
         <!-- header -->
