--- a/js/template/InternalNote.html
+++ b/js/template/InternalNote.html
@@ -1,14 +1,19 @@
 <div class="view-internal-note">
     {{#if notes}}
-    <h1>Internal Notes</h1>
-    <ul>
+    <h2>Internal Notes</h2>
+
+    <table class="notes">
         {{#each notes}}
-        <li>
-            <p>{{note}}</p>
-            <div class="creator">{{created_by}}</div>
-            <div class="date">{{created_date}}</div>
-        </li>
+        <tr>
+            <td class="info">
+                <div class="creator">{{created_by}}</div>
+                <div class="date">{{created_date}}</div>
+            </td>
+            <td class="note">{{note}}</td>
+        </tr>
         {{/each}}
-    </ul>
+    </table>
     {{/if}}
+
+    <h2 class="report">Health<em>tracks</em> Report</h2>
 </div>
